03 Oct 2001 Move INVALIDATE_AIA out of optimization - Juergen Dobrinski
02 Oct 2001 Fix MVPG to work in pageable guest - Paul Leisy
02 Oct 2001 Fix TRAP to work in pageable guest - Paul Leisy
28 Sep 2001 Fix MVCL bugs with new fast path code - Paul Leisy
28 Sep 2001 Restore change bit fixes to vstore.h - Paul Leisy
17 Sep 2001 Minor corrections to CEFR, CDFR, CXFR and MVPG - Jan Jaeger
13 Sep 2001 CXR setting wrong cc when fract=0 but char not - Paul Leisy
13 Sep 2001 Fix TRAP so page cross rupt does not set change bit - Paul Leisy
13 Sep 2001 MVPG missing TEA bit 29 and OP ACCESS ID on PIC 11 - Paul Leisy 
13 Sep 2001 MVPG should report PIC 11 on Page Table Length violation - Paul Leisy
13 Sep 2001 Fix BSG so ALET=1 is always treated as subspace - Paul Leisy
06 Sep 2001 Add FPO crossing checks to all storage fetches - Paul Leisy
06 Sep 2001 Fix RP so trace entry finished on PIC 1C - Paul Leisy
30 Aug 2001 Fix Change Bit in Key so on page crossers with rupt it's not set.
            Done by using new acctype ACCTYPE_WRITE_SKP - Paul Leisy
28 Aug 2001 Change FPR display so if BASIC FP EXTENSIONS all displayed - Paul Leisy
28 Aug 2001 Change MVCLE cpu-determined length - Paul Leisy
26 Aug 2001 Added test for file-existance in cardrdr.c (code suggested by Richard Snow) - Volker Bandke
24 Aug 2001 Add optional address parm to loadcore panel command - Michael Ackerson
23 Aug 2001 Fix general1.c so commented statements don't wrap to 2 lines - Paul Leisy
23 Aug 2001 LXD missing PIC 06 when R1 not valid - Paul Leisy
23 Aug 2001 CFXR needs to test overflow after rounding - Paul Leisy
23 Aug 2001 BSG failed to set subspace active in DUCT - Paul Leisy
20 Aug 2001 LKPG setting wrong cc - Paul Leisy
20 Aug 2001 Just set cc when r1=r2 for CUSE - Paul Leisy
20 Aug 2001 CUUTF wrong cc when len1 = 0 and len2 = 1 - Paul Leisy
20 Aug 2001 Fix SQXR div by 0 and others and SQDR hang - Paul Leisy
20 Aug 2001 Fix RP so ILC is correct for PIC 1C - Paul Leisy